trigger systemd reload when service file changed

--- a/tasks/project.yml
+++ b/tasks/project.yml
@@ -50,6 +50,7 @@
   when: item.tracd|default(False) and
         (ansible_local.init == 'systemd')
   with_items: trac_project_map
+  notify: [ Reload systemd ]
 
 - name: Enable systemd service
   service:
